--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -53,12 +53,21 @@ $breakpoints: (
     display: flex;
 
     aside {
-      width: 25%;
       background-color: $primary-bg;
+      @include respond-to('small') {
+        display: none;
+      }
+      @include respond-to('medium') {
+        width: 25%;
+        display: block;
+      }
     }
 
     main {
       width: 75%;
+      @include respond-to('small') {
+        width: 100%;
+      }
 
       form {
         display: flex;
@@ -74,15 +83,17 @@ $breakpoints: (
         }
 
         section {
-          flex: 1;
           width: 100%;
+          @include respond-to('small') {
+            width: 100%;
+          }
 
           @include respond-to('medium') {
-            width: 50%;
+            width: calc(50% - 1em);
           }
 
           @include respond-to('large') {
-            width: 25%;
+            width: calc(25% - 1em);
           }
           text-align: left;
 
