--- a/scss/checkout.scss
+++ b/scss/checkout.scss
@@ -194,6 +194,7 @@ $breakpoints: (
               font-weight: bold;
               font-size: 20px;
               padding: 20px;
+              cursor: pointer;
             }
           }
 
